# DescomplicandoKubernetes

./: .gitignore  README.md
Extras/: Dicas_prova.md  pod-security-policy.md
day-1/: DescomplicandoKubernetes-Day1.md
day-2/: DescomplicandoKubernetes-Day2.md
day-3/: DescomplicandoKubernetes-Day3.md
day-4/: DescomplicandoKubernetes-Day4.md
day-5/: DescomplicandoKubernetes-Day5.md
day-6/: DescomplicandoKubernetes-Day6.md
ebook/: Makefile  README.md  pyproject.toml  title.txt
ebook/pandoc-filter/: toc-remove.py
