[tool.poetry]
name = "DescomplicandoKubernetes"
version = "0.1.0"
description = "DescomplicandoKubernetes eBook"
authors = [
  "Igor Dourado Reis Nobrega <igordouradonobrega@gmail.com>"
]

[tool.poetry.dependencies]
python = "^3.7"
pandocfilters = "^1.4.3"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
